Fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,9 @@ h1{
 }
 
 @media (max-width: 500px){
+    *{
+        overflow: hidden;
+    }
     .card{
       transform: scale(0.75);  
     }
